--- a/network/templates/network/network_map.html
+++ b/network/templates/network/network_map.html
@@ -1,14 +1,16 @@
 <!-- network/templates/network/network_map.html -->
 {% extends 'base.html' %}
+{% extends 'base.html' %}
 {% load static %}
-
-{% block title %}Карта сети - Equipment Tracker{% endblock %}
 
 {% block content %}
 <div class="row">
-    <div class="col-md-3">{% include 'network/network_sidebar.html' %}</div>
+    <div class="col-md-3">
+        {% with equipment_count=equipments.count %}
+        {% include 'network/partials/_sidebar.html' %}
+        {% endwith %}
+    </div>
     <div class="col-md-9">
-        <div class="col-md-9">
             <div
                 class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                 <h1 class="h2">
