--- a/network/templates/network/subnet_detail.html
+++ b/network/templates/network/subnet_detail.html
@@ -1,11 +1,14 @@
 <!-- network/templates/network/subnet_detail.html -->
 {% extends 'base.html' %}
-
-{% block title %}Подсеть {{ subnet.network_address }}/{{ subnet.prefix_length }} - Equipment Tracker{% endblock %}
+{% load static %}
 
 {% block content %}
 <div class="row">
-    <div class="col-md-3">{% include 'network/network_sidebar.html' %}</div>
+    <div class="col-md-3">
+        {% with equipment_count=equipments.count %}
+        {% include 'network/partials/_sidebar.html' %}
+        {% endwith %}
+    </div>
     <div class="col-md-9">
         
         <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
