--- a/network/templates/network/subnet_list.html
+++ b/network/templates/network/subnet_list.html
@@ -2,11 +2,13 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Подсети сети - Equipment Tracker{% endblock %}
-
 {% block content %}
 <div class="row">
-    <div class="col-md-3">{% include 'network/network_sidebar.html' %}</div>
+    <div class="col-md-3">
+        {% with equipment_count=equipments.count %}
+        {% include 'network/partials/_sidebar.html' %}
+        {% endwith %}
+    </div>
     <div class="col-md-9">
         
         <div class="container-fluid py-4">
